--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <span>$500,000</span>
               </div>
             </div>
-            <a href="#" class="tournament-button">Participants</a>
+            <a href="tournois.html" class="tournament-button">Participants</a>
           </div>
         </div>
 
