--- a/tournois.html
+++ b/tournois.html
@@ -16,47 +16,47 @@
           <span class="logo-accent">E-Sport</span>
         </div>
         <nav class="nav">
-          <a href="#tournaments" class="nav-link">Tournois</a>
-          <a href="#teams" class="nav-link">Équipes</a>
-          <a href="#news" class="nav-link">Actualités</a>
+          <a href="index.html" class="nav-link">Tournois</a>
+          <a href="index.html" class="nav-link">Équipes</a>
+          <a href="index.html" class="nav-link">Actualités</a>
           <a href="#contact" class="nav-link">Contact</a>
         </nav>
       </div>
     </div>
     </header>
     <main class="MNn">
-        <section>
-         <div>
-            <span><img src="img/lh6rwjzims381.webp" alt=""></span>
+        <section class="sec-1">
+         <div class="card1">
+            <span><img src="img/lh6rwjzims381.webp" alt="" class="immg"></span>
             <span><h3>VS</h3></span>
-            <span><img src="img/images.jpg" alt=""></span>
+            <span><img src="img/images.jpg" alt="" class="immg"></span>
          </div>
-         <div>
-            <span><img src="img/channels4_profile.jpg" alt=""></span>
+         <div class="card1">
+            <span><img src="img/channels4_profile.jpg" alt="" class="immg"></span>
             <span><h3>VS</h3></span>
-            <span><img src="img/communityIcon_t9awljru7kj41.png" alt=""></span>
+            <span><img src="img/communityIcon_t9awljru7kj41.png" alt="" class="immg" ></span>
          </div>
-         <div>
-            <span><img src="img/100-thieves-logo-full-on-black-780x585.jpg" alt=""></span>
+         <div class="card1">
+            <span><img src="img/100-thieves-logo-full-on-black-780x585.jpg" alt=""class="immg"></span>
             <span><h3>VS</h3></span>
-            <span><img src="img/images (1).jpg" alt=""></span>
+            <span><img src="img/images (1).jpg" alt="" class="immg"></span> 
          </div>
         </section>
-        <section>
-          <div>
-            <span><img src="img/communityIcon_t9awljru7kj41.png" alt=""></span>
+        <section class="sec-1">
+          <div class="card1">
+            <span><img src="img/communityIcon_t9awljru7kj41.png" alt=""class="immg"></span>
             <span><h3>VS</h3></span>
-            <span><img src="img/images.jpg" alt=""></span>
+            <span><img src="img/images.jpg" alt="" class="immg"></span>
           </div>
-          <div>
-            <span><img src="img/channels4_profile.jpg" alt=""></span>
+          <div class="card1">
+            <span><img src="img/channels4_profile.jpg" alt=""class="immg"></span>
             <span><h3>VS</h3></span>
-            <span><img src="img/images (1).jpg" alt=""></span>
+            <span><img src="img/images (1).jpg" alt="" class="immg"></span>
           </div>
-          <div>
-            <span><img src="img/100-thieves-logo-full-on-black-780x585.jpg" alt=""></span>
+          <div class="card1">
+            <span><img src="img/100-thieves-logo-full-on-black-780x585.jpg" alt="" class="immg"></span>
             <span><h3>VS</h3></span>
-            <span><img src="img/lh6rwjzims381.webp" alt=""></span>
+            <span><img src="img/lh6rwjzims381.webp" alt="" class="immg"></span>
           </div>
         </section>
 
@@ -107,10 +107,10 @@
           <div class="footer-column">
             <h3 class="footer-heading">Plateforme</h3>
             <ul class="footer-list">
-              <li><a href="#tournaments" class="footer-link">Tournois</a></li>
-              <li><a href="#teams" class="footer-link">Équipes</a></li>
-              <li><a href="#" class="footer-link">Classements</a></li>
-              <li><a href="#" class="footer-link">Calendrier</a></li>
+              <li><a href="index.html" class="footer-link">Tournois</a></li>
+              <li><a href="index.html" class="footer-link">Équipes</a></li>
+              <li><a href="index.html" class="footer-link">Classements</a></li>
+              <li><a href="index.html" class="footer-link">Calendrier</a></li>
             </ul>
           </div>
           <div class="footer-column">
