--- a/liquidteam.html
+++ b/liquidteam.html
@@ -110,10 +110,10 @@
           <div class="footer-column">
             <h3 class="footer-heading">Plateforme</h3>
             <ul class="footer-list">
-              <li><a href="#tournaments" class="footer-link">Tournois</a></li>
-              <li><a href="#teams" class="footer-link">Équipes</a></li>
-              <li><a href="#" class="footer-link">Classements</a></li>
-              <li><a href="#" class="footer-link">Calendrier</a></li>
+              <li><a href="index.html" class="footer-link">Tournois</a></li>
+              <li><a href="index.html" class="footer-link">Équipes</a></li>
+              <li><a href="index.html" class="footer-link">Classements</a></li>
+              <li><a href="index.html" class="footer-link">Calendrier</a></li>
             </ul>
           </div>
           <div class="footer-column">
